# ctypes-tutorial

./: .gitignore  CMakeLists.txt  README.md  binarytree.c  binarytree.h  main.c  testcases.c  testcases.h
binarytree/: README.md  binarytree.h  main.c  makefile  testcases.c  testcases.h
pybinarytree/: __init__.py  binarytree_h.py  build_options.py  define_h.py  testcases_h.py
